scss/_main.scss
.intro-bg-ilust {
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
}
.intro {
  padding-top: 90px;

  &-display {
    color: #fff;
    font-size: 100px;
    line-height: 100%;
  }
  &-cta {
    display: inline-flex;
    align-items: center;
    margin-top: 60px;
    padding: 15px 25px;

    border-radius: 5px;
    background-color: $c-1;
    border: 1px solid $c-1;
    color: #fff;
    &:hover {
      color: $c-1;
      background-color: $c-2;
    }

    i {
      font-size: 28px;
      margin-left: 24px;
    }
  }
  &-man-ilust {
    position: absolute;
    top: 254px;
    left: -285px;
  }
}
.intro-truck-ilust {
  margin-top: 173px;
  margin-left: -204px;
}
.about {
  padding-top: 180px;

  &-ilust {
    margin-top: -74px;
    margin-left: -30px;
  }
}
.section-header {
  color: $c-1;
  text-transform: uppercase;
  font-family: "Rubik";
  font-style: normal;
  font-weight: bold;
  font-size: 24px;
  line-height: 40px;
  letter-spacing: 0.1em;
}
.section-text {
  margin-top: 40px;
  margin-right: 66px;

  color: $c-3;
  font-family: "Rubik";
  font-style: normal;
  font-weight: 300;
  font-size: 18px;
  line-height: 40px;
}
.section-highlight {
  padding-top: 70px;
  padding: 30px 37px;

  color: $c-3;
  background-color: $c-4;
  border-left: 10px solid $c-5;
  border-radius: 5px 0 0 5px;
  font-family: "Rubik";
  font-style: normal;
  font-weight: 500;
  font-size: 24px;
  line-height: 36px;
}
.howto {
  padding-top: 260px;

  &-ilust {
    margin-left: -149px;
    margin-top: -116px;
  }
}
.faq {
  margin-top: 120px;
  padding-top: 160px;
  padding-bottom: 100px;

  &-text-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  &-text {
    margin-top: 44px;

    color: $c-3;
    font-style: normal;
    font-weight: normal;
    font-size: 48px;
    line-height: 140%;
  }
  &-ilust {
    margin-left: -90px;
    margin-top: -60px;
  }
  &-bg {
    position: absolute;
    z-index: -1;
    right: 0;
    top: 0;
    height: 1278px;
  }

  // accordions
  &-accordion-container {
    margin-top: 90px;
  }
  &-accordion {
    display: flex;
    flex-direction: column;

    background: $c-7;
    box-shadow: 0px 20px 40px $c-6;
    border-radius: 10px;

    & + & {
      margin-top: 10px;
    }

    button {
      height: 90px;
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding: 25px 35px;

      background-color: #fff;
      box-shadow: 0px 20px 40px $c-6;
      border-radius: 10px;

      border: 0;
      outline: 0;

      > span {
        color: $c-3;
        font-family: "Rubik";
        font-style: normal;
        font-weight: 500;
        font-size: 18px;
        line-height: 30px;
        text-align: left;
      }
      > i {
        margin-left: 1rem;
        color: $c-1;
      }
      &.collapsed > i::before {
        content: "\f067";
      }
      > i::before {
        content: "\f068";
      }
    }
    &.load button {
      background-color: $c-8;
      box-shadow: none;
      &:hover {
        background-color: $c-9;
      }
      transition: background-color 0.3s ease;
    }
    &.load span {
      flex-grow: 1;
      text-align: center;
      text-transform: uppercase;

      color: $c-5;
      font-family: "Rubik";
      font-style: normal;
      font-weight: bold;
      font-size: 18px;
      line-height: 30px;
      letter-spacing: 0.05em;
    }

    &-text {
      margin: 0;
      padding: 40px 35px 60px;

      color: $c-3;
      font-family: "Rubik";
      font-style: normal;
      font-weight: 300;
      font-size: 18px;
      line-height: 30px;
    }
  }
}
.testimonial {
  padding-top: 177px;
  .carousel {
    margin-top: 90px;
  }
  .carousel-card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 420px;
    height: 360px;
    padding: 60px 47px 40px;

    background-color: #fff;
    box-shadow: 0px 20px 40px $c-6;
    border-radius: 10px;

    p {
      margin: 0;
      color: $c-3;
      font-family: "Rubik";
      font-style: normal;
      font-weight: 300;
      font-size: 16px;
      line-height: 30px;
    }
    &-avatar {
      display: flex;
      align-items: center;
    }
    &-avatar img {
      width: 60px;
      height: 60px;
      border-radius: 50%;
      margin-right: 20px;
    }
    &-avatar span {
      color: $c-3;
      font-family: "Rubik";
      font-style: normal;
      font-weight: bold;
      font-size: 16px;
      line-height: 30px;
    }

    // carousel fix
    margin: 0;
  }
  .owl-stage-outer {
    padding: 40px 20px;
    margin: -40px -20px;
    cursor: grab;
    width: 180%;
    border-radius: 10px;
  }
  .owl-nav {
    position: absolute;
    top: -40px;
    right: 0;
  }
  .owl-nav span {
    display: none;
  }
  .owl-prev,
  .owl-next {
    width: 42px;
    height: 16px;
    outline: none;
    background-image: url(../img/carousel-arrow.png) !important;
    background-repeat: no-repeat !important;
    background-position: top !important;
  }
  .owl-prev {
    margin-right: 1rem;
    transform: rotateZ(180deg);
    background-position: bottom !important;
  }
}
.contact {
  margin-top: 160px;
  padding-top: 60px;
  padding-bottom: 120px;

  &-text-container {
    display: flex;
    align-items: center;
  }
  &-text {
    box-sizing: content-box;
    width: 330px;
    margin-top: 166px;
    padding: 20px 40px;

    border-left: 10px solid $c-1;
    border-radius: 5px 0 0 5px;

    color: #fff;
    font-family: "Rubik";
    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 30px;
  }

  &-form {
    display: flex;
    flex-direction: column;
    padding: 52px 75px;

    background: #fff;
    box-shadow: 0px 20px 40px $c-6;
    border-radius: 10px;
  }
  &-in-group {
    display: flex;
    flex-direction: column;

    & + & {
      margin-top: 30px;
    }

    label {
      margin-bottom: 10px;
      color: $c-3;
      font-family: "Rubik";
      font-style: normal;
      font-weight: 300;
      font-size: 16px;
      line-height: 40px;
    }
    input {
      height: 58px;
      padding: 8px 40px;

      background: #ffffff;
      border: 1px solid $c-9;
      border-radius: 5px;

      color: $c-3;
      font-family: "Rubik";
      font-style: normal;
      font-weight: bold;
      font-size: 18px;
      line-height: 40px;

      &::placeholder {
        font-family: "Rubik";
        font-style: normal;
        font-weight: 300;
        font-size: 18px;
        line-height: 40px;
      }

      &:focus,
      &:not(:placeholder-shown) {
        background: #fff;
        border: 2px solid $c-1;
        box-shadow: 0px 20px 40px $c-8;
        border-radius: 5px;
      }

      transition: box-shadow 0.2s ease, border 0.2s ease;
    }
  }
  &-submit {
    width: max-content;
    margin-top: 30px;
  }

  .footer-nav {
    margin-top: 170px;

    .logo-nav {
      padding-top: 0;
    }
  }

  &-ilust {
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
  }
  &-bg {
    position: absolute;
    z-index: -2;
    bottom: 0;
    left: 0;
    height: 79%;
  }
}

// mobile queries
@media (max-width: 575.98px) {
  .intro-bg-ilust {
    height: 710px;
  }
  .intro-display {
    text-align: center;
  }
  a.intro-cta {
    display: flex;
    margin: 30px auto 0;
    width: max-content;
  }
  .intro-truck-ilust {
    display: block;
    width: 85%;
    margin: 50px auto 0;
  }

  .section-header {
    text-align: center;
  }
  .section-text {
    text-align: center;
    margin-right: 0;
  }
  .section-highlight {
    font-size: 20px;
    padding: 25px;
  }

  .faq-text {
    font-size: 35px;
    text-align: center;
  }
  .faq-accordion button {
    height: unset;
  }

  .testimonial .owl-nav {
    right: unset;
    top: -21px;
    left: 50%;
    transform: translateX(-50%);
  }
  .testimonial .owl-stage-outer {
    width: 100%;
    overflow: unset;
  }
  .testimonial .carousel-card {
    width: 80vw;
    padding: 35px;
  }

  .contact-text {
    padding: 20px;
  }
  .contact-form {
    padding: 35px;
  }
  .contact .footer-nav {
    display: flex;
    justify-content: center;
  }
}
@media (max-width: 991.98px) {
  .intro-man-ilust {
    display: none;
  }
  .intro-display {
    font-size: clamp(40px, 10vw, 100px);
  }

  .about-ilust,
  .howto-ilust,
  .faq-ilust {
    width: 95%;
    margin: 50px 0 0;
  }

  .contact-bg {
    height: 100%;
  }
  .contact-ilust {
    top: -50px;
  }
  .contact-text-container {
    justify-content: center;
    margin-bottom: 50px;
  }
  .contact-submit {
    width: 100%;
    justify-content: space-between;
  }
}

// 1080p fixs
@media (min-width: 1601px) {
  .intro-bg-ilust {
    width: 75%;
  }
  .contact-bg {
    height: 87%;
  }
}

